[project]
name = "ccam-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryan",email = "mrouer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "dbfread (>=2.0.7,<3.0.0)",
    "charset-normalizer (>=3.4.4,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.0.1,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
